Fix navbar-nav overflowing

--- a/app/assets/css/header.css
+++ b/app/assets/css/header.css
@@ -126,10 +126,6 @@
     padding: 5px 10px;
 }
 
-.navbar-nav {
-    height: 100%;
-}
-
 .navbar-nav li a {
     padding: 32px 15px;
     font-weight: bold;
